<resources>

    <string name="app_name">Spectrum</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_topics">Topics Activity</string>
    <string name="title_activity_profile">Profile Activity</string>

    <!-- Dialogs -->
    <string name="AreYouSure">Are you sure?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Add">Add</string>
    <string name="Save">Save</string>
    <string name="Cancel">Cancel</string>
    <string name="Previous">Prev</string>
    <string name="Next">Next</string>
    <string name="End">End Test</string>
    <string name="Edit">Edit</string>
    <string name="Verify">Verify</string>

    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_gender">I am</string>
    <string name="hint_location">Location</string>
    <string name="hint_dob">Date of Birth</string>
    <string name="hint_password">Password</string>
    <string name="hint_otp">Enter OTP</string>
    <string name="hint_enter_mobile_no">Mobile No</string>
    <string name="hint_enter_password">Password</string>
    <string name="hint_enter_name">Name</string>
    <string name="hint_enter_email">E-Mail</string>
    <string name="hint_enter_city">City</string>
    <string name="hint_enter_subject">Subject</string>
    <string name="hint_enter_message">Write Message</string>

    <string name="button_sign_up">Sign Up</string>
    <string name="button_register">Start Learning</string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_send">Send Mail</string>
    <string name="button_reset_password">Create / Reset Password</string>
    <string name="title_confirmation_code">VERIFY OTP MANUALLY</string>
    <string name="button_view_diagram">View Diagram</string>

    <string name="menu_settings">Settings</string>
    <string name="action_download">Download</string>
    <string name="action_clear">Clear All</string>
    <string name="action_inbox">Inbox</string>

</resources>