<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relative_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/reg_background" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hello!"
        android:paddingTop="20dp"
        android:paddingBottom="5dp"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/myPrimaryColor"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:gravity="center"
        android:orientation="vertical" >

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:orientation="vertical"
            android:id="@+id/list_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="0dp"
            card_view:cardBackgroundColor="#fbcabb"
            android:background="@android:color/white" >

            <LinearLayout
                android:id="@+id/linear_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_sign_up"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    android:layout_gravity="center"
                    android:textColor="@color/myPrimaryColor" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <EditText
                        android:id="@+id/editName"
                        style="@style/CustomEditTextStyle"
                        android:hint="@string/hint_enter_name"
                        android:maxLines="1"
                        android:inputType="text"
                        android:textColor="@color/myTextPrimaryColor"
                        android:textColorHint="@color/myTextSecondaryColor"
                        android:drawableStart="@null" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp" >

                    <EditText
                        android:id="@+id/editPhoneNumber"
                        style="@style/CustomEditTextStyle"
                        android:hint="@string/hint_enter_mobile_no"
                        android:digits="1234567890"
                        android:maxLines="1"
                        android:inputType="phone"
                        android:textColor="@color/myTextPrimaryColor"
                        android:textColorHint="@color/myTextSecondaryColor"
                        android:drawableStart="@null" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp" >

                    <EditText
                        android:id="@+id/editPassword"
                        style="@style/CustomEditTextStyle"
                        android:hint="@string/hint_enter_password"
                        android:inputType="textPassword"
                        android:maxLength="10"
                        android:textColor="@color/myTextPrimaryColor"
                        android:textColorHint="@color/myTextSecondaryColor"
                        android:drawableStart="@null" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="40dp"
                    android:minWidth="160dp"
                    android:textSize="14sp"
                    android:textColor="@android:color/white"
                    android:textAllCaps="false"
                    android:onClick="onClick"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:background="@color/myPrimaryColor"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:text="@string/button_register" />

                <Button
                    android:id="@+id/btnConfirmationCode"
                    style="@style/LinkButtonStyle"
                    android:onClick="onClick"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/myPrimaryColor"
                    android:layout_gravity="center|bottom"
                    android:visibility="gone"
                    android:text="@string/title_confirmation_code" />

                <ProgressBar
                    android:id="@+id/pbLoading"
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:indeterminate="true"
                    android:visibility="gone"
                    android:layout_gravity="center_horizontal|center_vertical" />

                <TextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/myTextPrimaryColor"
                    android:textSize="13sp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</RelativeLayout>