<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relative_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/reg_background" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Welcome Back"
            android:paddingTop="30dp"
            android:paddingBottom="10dp"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/myPrimaryColor"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nice to see you again!"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/myPrimaryColor"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:gravity="center"
        android:orientation="vertical" >

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:orientation="vertical"
            android:id="@+id/cardlist_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="0dp"
            card_view:cardBackgroundColor="#fbcabb"
            android:background="@android:color/white" >

            <LinearLayout
                android:id="@+id/linear_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_sign_in"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    android:layout_gravity="center"
                    android:textColor="@color/myPrimaryColor" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <EditText
                        android:id="@+id/editPhoneNumber"
                        style="@style/CustomEditTextStyle"
                        android:hint="@string/hint_enter_mobile_no"
                        android:digits="1234567890"
                        android:maxLines="1"
                        android:inputType="phone"
                        android:textColor="@color/myTextPrimaryColor"
                        android:textColorHint="@color/myTextSecondaryColor"
                        android:drawableStart="@null" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp" >

                    <EditText
                        android:id="@+id/editPassword"
                        style="@style/CustomEditTextStyle"
                        android:hint="@string/hint_enter_password"
                        android:inputType="textPassword"
                        android:textColor="@color/myTextPrimaryColor"
                        android:textColorHint="@color/myTextSecondaryColor"
                        android:drawableStart="@null" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btnNewPassword"
                    style="@style/LinkButtonStyle"
                    android:gravity="end"
                    android:textStyle="normal"
                    android:visibility="gone"
                    android:text="@string/button_reset_password"/>

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="40dp"
                    android:minWidth="160dp"
                    android:textSize="14sp"
                    android:textColor="@android:color/white"
                    android:onClick="onClick"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:textAllCaps="false"
                    android:background="@color/myPrimaryColor"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:text="@string/button_sign_in" />

                <ProgressBar
                    android:id="@+id/pbLoading"
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="5dp"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:indeterminate="true"
                    android:visibility="gone"
                    android:layout_gravity="center_horizontal|center_vertical" />

                <TextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/myTextPrimaryColor"
                    android:textSize="13sp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="40dp"
        android:minWidth="130dp"
        android:textSize="14sp"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:onClick="onClick"
        android:background="@color/myPrimaryColor"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/button_sign_up" />

</RelativeLayout>