<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/layout_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollableContents"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:scrollbars="none" >

        <LinearLayout
            android:id="@+id/linearMain"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical" >

            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="2dp"
                card_view:cardBackgroundColor="@color/myWindowBackground"
                card_view:cardElevation="0dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:foreground="?android:attr/selectableItemBackground" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    android:layout_margin="10dp" >


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/myTextPrimaryColor"
                        android:textSize="14sp"
                        android:paddingStart="3dp"
                        android:paddingEnd="3dp"
                        android:text="WRITE YOUR QUERY" />


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_subject"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp" >

                        <EditText
                            android:id="@+id/editSubject"
                            style="@style/CustomEditTextStyle"
                            android:hint="@string/hint_enter_subject"
                            android:singleLine="true"
                            android:maxLength="30" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_message"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp" >

                        <EditText
                            android:id="@+id/editMessage"
                            style="@style/CustomEditTextStyle"
                            android:hint="@string/hint_enter_message"
                            android:maxLines="10"
                            android:maxLength="1000" />

                    </android.support.design.widget.TextInputLayout>


                    <Button
                        android:id="@+id/btnSend"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="40dp"
                        android:textSize="14sp"
                        android:textColor="@android:color/white"
                        android:textAllCaps="false"
                        android:onClick="onClick"
                        android:background="@color/myPrimaryColor"
                        android:layout_marginBottom="30dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/button_send" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>