<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/layout_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollableContents"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:scrollbars="none" >

        <LinearLayout
            android:id="@+id/linearMain"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical" >

            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="2dp"
                card_view:cardBackgroundColor="@color/myWindowBackground"
                card_view:cardElevation="0dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:foreground="?android:attr/selectableItemBackground" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    android:layout_margin="10dp" >


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/myTextPrimaryColor"
                        android:textSize="14sp"
                        android:paddingStart="3dp"
                        android:paddingEnd="3dp"
                        android:text="PROFILE DETAILS" />


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp" >

                        <EditText
                            android:id="@+id/editName"
                            style="@style/CustomEditTextStyle"
                            android:hint="@string/hint_name"
                            android:maxLines="1"
                            android:maxLength="30" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp" >

                        <EditText
                            android:id="@+id/editEmail"
                            style="@style/CustomEditTextStyle"
                            android:hint="@string/hint_email"
                            android:maxLines="1"
                            android:inputType="textEmailAddress"
                            android:maxLength="50" />

                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/myTextSecondaryColor"
                        android:textSize="12sp"
                        android:paddingStart="4dp"
                        android:paddingEnd="4dp"
                        android:layout_marginTop="10dp"
                        android:text="Gender" />

                    <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/spinner_gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.1dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:background="@color/divider" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp" >

                        <EditText
                            android:id="@+id/editLocation"
                            style="@style/CustomEditTextStyle"
                            android:hint="@string/hint_location"
                            android:maxLines="1"
                            android:inputType="text"
                            android:maxLength="100" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_dob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp" >

                        <EditText
                            android:id="@+id/editDOB"
                            style="@style/CustomEditTextStyle"
                            android:hint="@string/hint_dob"
                            android:maxLines="1"
                            android:clickable="true"
                            android:onClick="onClick"
                            android:digits=""
                            android:inputType="text" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>